[FIX] Toggle Side Menu Button Visiblity Changes

--- a/addons/web_flectra/static/src/scss/navbar.scss
+++ b/addons/web_flectra/static/src/scss/navbar.scss
@@ -66,3 +66,12 @@ nav.o_main_navbar {
     }
 }
 
+.o-menu-slide {
+    display:none !important;
+}
+
+body[data-menu="sidemenu"]{
+   .o-menu-slide {
+        display:block !important;
+    }
+}
